dodanie nasłuchiwania logów konsoli bidi